--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -31,12 +31,18 @@ body {
 }
 
 #song-image {
-    width: 100%;
-    height: auto;
+    width: 750px; /* Tamaño fijo */
+    height: 520px; /* Tamaño fijo */
+    object-fit: cover; /* Asegura que la imagen llene el espacio sin deformarse */
     border: 10px solid rgba(255, 255, 255, 0.5);
     border-radius: 15px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
+
+.back-img {
+    position: absolute;
+}
+
 
 .info-panel {
     position: absolute;
@@ -61,13 +67,17 @@ body {
 .controls-panel {
     position: absolute;
     bottom: 10px; /* Ajuste para móviles */
-    background: rgba(0, 0, 0, 0.86);
+    background: rgba(0, 0, 0, 0.96);
     padding: 8px; /* Ajuste para móviles */
     border-radius: 10px;
     display: flex;
-    flex-direction: row; /* Por defecto, los botones están en fila */
+    flex-direction:column; /* Por defecto, los botones están en fila */
     gap: 8px; /* Espacio entre botones */
     align-items: center;
+}
+
+.controls-panel div {
+    padding-bottom: 1px;
 }
 
 .controls-panel button {
@@ -88,9 +98,50 @@ body {
 }
 
 .controls-panel input[type="range"] {
-    width: 80px; /* Ajuste para móviles */
+    width: 120px;
+    height: 6px;
     cursor: pointer;
+    appearance: none;
+    background: transparent;
+    border-radius: 5px;
+    outline: none;
 }
+
+/* Barra de progreso del slider */
+.controls-panel input[type="range"]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 6px;
+    background: linear-gradient(to right, var(--song-color, #4caf50) 0%, rgba(0, 0, 0, 0.5) 0%);
+    border-radius: 5px;
+    transition: background 0.3s ease-in-out;
+}
+
+/* Estilo del "thumb" (el control deslizante) */
+.controls-panel input[type="range"]::-webkit-slider-thumb {
+    appearance: none;
+    width: 14px;
+    height: 14px;
+    background: white;
+    border: 2px solid var(--song-color, #4caf50);
+    border-radius: 50%;
+    cursor: pointer;
+    margin-top: -4px;
+    transition: transform 0.2s ease-in-out;
+}
+
+.controls-panel input[type="range"]::-moz-range-progress {
+    background: var(--song-color, #4caf50);
+}
+
+.controls-panel input[type="range"]::-moz-range-track {
+    background: rgba(0, 0, 0, 0.5);
+}
+
+/* Efecto al mover el slider */
+.controls-panel input[type="range"]::-webkit-slider-thumb:hover {
+    transform: scale(1.2);
+}
+
 
 .background-panel {
     position: fixed;
@@ -103,6 +154,7 @@ body {
     z-index: -1;
     transition: opacity 0.3s ease;
 }
+
 
 /* Media Queries para pantallas muy pequeñas (apilamiento vertical) */
 @media (max-width: 480px) {
@@ -122,6 +174,19 @@ body {
     .controls-panel input[type="range"] {
         width: 100%; /* Ocupa todo el ancho disponible */
     }
+}
+
+#play-pause-btn {
+    width: 56px;
+    height: 38px;
+}
+
+#prev-btn, #next-btn {
+    width: 96px;
+}
+
+#rewind-btn, #forward-btn {
+    width: 56px;
 }
 
 /* Media Queries para tablets */
