--- a/src/css/index.css
+++ b/src/css/index.css
@@ -146,7 +146,7 @@ body {
 .panel-inicial {
     position: absolute;
     background: rgba(0, 0, 0, 0.98);
-    z-index: 10;
+    z-index: 110;
     height: 100vh;
     width: 100vw;
     text-align: center;
@@ -188,3 +188,16 @@ body {
     margin-top: 12px;
     font-size: 1.24rem;
 }
+
+.button-panel-inicial {
+    color: white;
+    z-index: 10;
+    padding: 7px;
+    top: 0;
+    font-size: 1.2rem;
+    margin-top: 32px;
+    position: fixed;
+    background-color: rgb(0, 0, 0, 0.52);
+    border: 1px #000 solid;
+}
+
