--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -304,6 +304,7 @@ body {
         z-index: 91;
         background-color: #0a0a0a;
         margin: 0;
+        max-height: 100%;
         height: 100%;
         width: 100%;
         position: absolute;
