--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -292,6 +292,7 @@ body {
 @media (max-width: 1050px) {
 
    .button-panel-inicial {
+        font-family: Arial, sans-serif;
         display:block;
         z-index: 92;
         right: 0;
@@ -300,14 +301,24 @@ body {
         margin-right: 42px;
    }
 
+   .button-panel-inicial:hover {
+       transform: scale(1.1);
+       border: 2px solid black;
+       cursor: pointer;
+    }
+
     .panel-tracks {
         z-index: 91;
         background-color: #0a0a0a;
         margin: 0;
-        max-height: 100%;
-        height: 100%;
-        width: 100%;
+        height: 100vh;
+        width: 100vw;
         position: absolute;
         display: none;
+        padding: 22px;
+    }
+
+    .panel-tracks p {
+        margin-top: 16%;
     }
 }
